--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>My_Website</title>
 </head>
 <body>
-    <h1>这是我的测试网站</h1>
-    <h2>This is my test website</h2>
-    <p>唐宇轩暗恋……（嘻嘻）</p>
+<h1>这是我的测试网站</h1>
+<h2>This is my test website</h2>
+<a href="/Codes/打枪游戏.cpp" download="打枪游戏.cpp">下载 打枪游戏.cpp</a>
 </body>
 </html>
-
