--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
     <style>
         body {
             font-family: "思源黑体 Light", "Source Han Sans CN Light", sans-serif;
-            background: #ffffff;
+            background-color: #ffffff;
             margin: 0;
             padding: 0;
-            transition: background 0.3s ease;
+            transition: background-color 0.3s ease;
         }
 
         .title {
             display: flex;
             width: 100%;
-            background: #f2f2f2;
-            opacity: 0.95;
+            background-color: #f2f2f2;
             align-items: center;
             justify-content: space-between;
             height: 10vh;
@@ -25,7 +24,7 @@
             max-height: 80px;
             padding: 0 15px;
             box-sizing: border-box;
-            transition: background 0.3s ease;
+            transition: background-color 0.3s ease;
         }
 
         #titleText {
@@ -36,7 +35,7 @@
         }
 
         #node {
-            background: #141e2d;
+            background-color: #141e2d;
             font-size: clamp(1.2rem, 3vw, 1.5rem);
             cursor: pointer;
             padding: 1rem;
@@ -58,7 +57,7 @@
         }
 
         .downloadList {
-            background: #f2f2f2;
+            background-color: #f2f2f2;
             border: 2px solid #e4e4e4;
             border-radius: 5%;
             padding: 15px 13px 30px;
@@ -69,16 +68,17 @@
         #downloadButton {
             padding: 8px 16px;
             cursor: pointer;
-            background: #87ceeb;
+            background-color: #87ceeb;
             border-radius: 5%;
         }
 
         .end {
             display: flex;
             height: 7vh;
-            background: #f5f5fa;
+            background-color: #f5f5fa;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
             border-top: 1px solid #e4e4e4;
         }
     </style>
@@ -108,7 +108,8 @@
                                                                                            href="/Games/gunGame.html">在线游玩</a></span>
 </div>
 <div class="end">
-    <span>Copyright © 2025–2025 <strong>面条本条的网站 a-red-apple.github.io</strong> All Rights Reserved.</span>
+    <span>Copyright © 2025–2025 <strong>线条本条的网站 a-red-apple.github.io</strong> All Rights Reserved.</span>
+    <span>Go to <strong><a href="https://pythoncpy.github.io/">pythoncpy.github.io</a></strong></span>
 </div>
 <script>
     let Now_Mode = true;
