--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </div>
 <div class="end">
     <span>Copyright © 2025–2025 <strong>线条本条的网站 a-red-apple.github.io</strong> All Rights Reserved.</span>
-    <span>Go to <strong><a href="https://pythoncpy.github.io/">pythoncpy.github.io</a></strong></span>
+    <span>Go to <strong><a href="https://pythoncpy.github.io/" target="_black">pythoncpy.github.io</a></strong></span>
 </div>
 <script>
     let Now_Mode = true;
