--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
         .downloadList {
             background-color: #f2f2f2;
-            border: 2px solid #e4e4e4;
-            border-radius: 5%;
+            border: 1px solid #e4e4e4;
+            border-radius: 0.5vw;
             padding: 15px 13px 30px;
             flex-direction: column;
             align-items: center;
@@ -69,7 +69,7 @@
             padding: 8px 16px;
             cursor: pointer;
             background-color: #87ceeb;
-            border-radius: 5%;
+            border-radius: 0.3vw;
         }
 
         .end {
@@ -80,6 +80,7 @@
             justify-content: center;
             flex-direction: column;
             border-top: 1px solid #e4e4e4;
+            min-height: 60px;
         }
     </style>
 </head>
@@ -105,7 +106,7 @@
     </div>
     <span id="playOnlineGame" style="color: black; transition: all 0.25s ease;">单击此处<a id="playOnlineGameLink"
                                                                                            style="color: #0000ff; transition: all 0.25s ease;"
-                                                                                           href="/Games/gunGame.html">在线游玩</a></span>
+                                                                                           href="/Games/gunGame.html"><s>在线游玩</s></a> 或者 <a href="/Codes/numbersTest.html">练习口算</a></span>
 </div>
 <div class="end">
     <span>Copyright © 2025–2025 <strong>线条本条的网站 a-red-apple.github.io</strong> All Rights Reserved.</span>
