--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
         </button>
         <a id="downloadLink" href="/Codes/打枪游戏.cpp" download="打枪游戏.cpp" style="display: none"></a>
     </div>
-    <span id="playOnlineGame" style="color: black; transition: all 0.25s ease;">单击此处<a id="playOnlineGameLink"
-                                                                                           style="color: #0000ff; transition: all 0.25s ease;"
-                                                                                           href="/Games/gunGame.html"><s>在线游玩</s></a> 或者 <a href="/Codes/numbersTest.html">练习口算</a></span>
+    <span id="playOnlineGame" style="color: black; transition: all 0.25s ease;">单击此处<a class="Links" style="color: #0000ff; transition: all 0.25s ease;" href="/Games/gunGame.html"><s>在线游玩</s></a> 或者 <a class="Links" style="color: #0000ff; transition: all 0.25s ease;" href="/Codes/numbersTest.html">练习口算</a></span>
 </div>
 <div class="end">
     <span>Copyright © 2025–2025 <strong>线条本条的网站 a-red-apple.github.io</strong> All Rights Reserved.</span>
@@ -122,7 +120,6 @@
         node: document.querySelector("#node"),
         downloadList: document.querySelector(".downloadList"),
         playOnlineGame: document.querySelector("#playOnlineGame"),
-        playOnlineGameLink: document.querySelector("#playOnlineGameLink"),
         end: document.querySelector(".end"),
     };
 
@@ -133,7 +130,9 @@
         all.node.style.background = Now_Mode ? "#ffffff" : "#1e2837";
         all.downloadList.style.border = Now_Mode ? "2px solid #ffffff" : "2px solid #e4e4e4";
         all.playOnlineGame.style.color = Now_Mode ? "#ffffff" : "#000000";
-        all.playOnlineGameLink.style.color = Now_Mode ? "#29ff29" : "#0000ff";
+        document.querySelectorAll(".Links").forEach(link => {
+            link.style.color = Now_Mode ? "#29ff29" : "#0000ff";
+        });
         Now_Mode = !Now_Mode;
     }
 </script>
