--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </button>
         <a id="downloadLink3" href="/Files/【民间数据】CSP-S 2025 SD 批量测试.xlsx" download="【民间数据】CSP-S 2025 SD 批量测试.xlsx" style="display: none"></a>
     </div>
-    <span id="playOnlineGame" style="color: black; transition: all 0.25s ease;">单击此处<a class="Links" style="color: #0000ff; transition: all 0.25s ease;" href="/Games/gunGame.html"><s>在线玩打枪游戏</s></a> 或者 <a class="Links" style="color: #0000ff; transition: all 0.25s ease;" href="/Codes/numbersTest.html">练习口算</a></span>
+    <span id="playOnlineGame" style="color: black; transition: all 0.25s ease;">单击此处<a class="Links" style="color: #0000ff; transition: all 0.25s ease; pointer-events: none; cursor: not-allowed;" href="javascript: void(0);"><s>在线玩打枪游戏</s></a> 或者 <a class="Links" style="color: #0000ff; transition: all 0.25s ease;" href="/Codes/numbersTest.html">练习口算</a></span> <!-- /Games/gunGame.html -->
 </div>
 <div class="end">
     <span>Copyright © 2025–2025 <strong>线条本条的网站 a-red-apple.github.io</strong> All Rights Reserved.</span>
