--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
             margin: 0;
             padding: 0;
             transition: background-color 0.3s ease;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
-        .title {
+        #title {
             display: flex;
             width: 100%;
             background-color: #f2f2f2;
             align-items: center;
-            justify-content: space-between;
-            height: 10vh;
-            min-height: 50px;
-            max-height: 80px;
-            padding: 0 15px;
+            justify-content: center;
+            min-height: 10vh;
             box-sizing: border-box;
             transition: background-color 0.3s ease;
         }
@@ -34,141 +34,219 @@
             transition: color 0.3s ease;
         }
 
-        #node {
-            background-color: #141e2d;
-            font-size: clamp(1.2rem, 3vw, 1.5rem);
-            cursor: pointer;
-            padding: 1rem;
+        #updates_list {
+            display: flex;
+            flex: 1;
+            flex-direction: column;
+            align-items: center;
+            gap: 1vh;
+        }
+
+        #add_logs {
+            display: flex;
+            width: 80%;
+            height: 10%;
+            align-items: center;
+        }
+
+        #add_button {
+            background-color: #1765b1;
+            aspect-ratio: 1/1;
             border-radius: 50%;
-            transition: all 0.3s ease;
-        }
-
-        #node:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .download {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 90vh;
-            flex-direction: column;
-        }
-
-        .downloadList {
-            display: flex;
-            background-color: #f2f2f2;
-            border: 1px solid #e4e4e4;
-            border-radius: 0.5vw;
-            padding: 1vw 1vw 1vw;
-            flex-direction: column;
-            align-items: center;
-            gap: 1vw;
-        }
-
-        .downloadButton {
-            padding: 0.5vw 1vw;
+            color: #ffffff;
+            font-size: clamp(1rem, 1vw, 2rem);
+            padding: 0.3rem 0.7rem;
+            margin: 0.7rem 0.5rem 0.5rem 0.5rem;
+            border: 1px solid #5484b5;
             cursor: pointer;
-            background-color: #87ceeb;
-            border-radius: 0.3vw;
         }
 
-        .end {
+        #back_button {
+            border: 1px solid #e4e4e4;
+            background-color: #f5f5fa;
+            font-size: clamp(1rem, 0.9vw, 2rem);
+            aspect-ratio: 1/0.5;
+            border-radius: 5px;
+            padding: 0.3rem 0.7rem;
+            margin-top: 1rem;
+            width: 7%;
+            cursor: pointer;
+        }
+
+        #end {
             display: flex;
-            height: 7vh;
             background-color: #f5f5fa;
             align-items: center;
             justify-content: center;
             flex-direction: column;
             border-top: 1px solid #e4e4e4;
-            min-height: 60px;
+            min-height: 7vh;
             font-size: clamp(0.75rem, 1vw, 1rem);
         }
 
-        .end span {
+        form {
             width: 80%;
-            text-align: center;
-            word-break: break-all;
-            padding: 0 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            margin-top: 1rem;
+        }
+
+        label {
+            font-size: clamp(1rem, 1.1rem, 2rem);
+            font-weight: bold;
+        }
+
+        input, textarea {
+            padding: 0.5rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 1rem;
+            font-family: inherit;
+        }
+
+        #submit {
+            background-color: #1765b1;
+            color: white;
+            border: none;
+            padding: 0.7rem;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+            margin-top: 1rem;
+        }
+
+        #page_submit {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #page_submit-main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: #ebebeb;
+            width: 30%;
+            height: 27.5%;
+            border-radius: 5px;
+        }
+
+        .page_submit_button_group {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: none;
+            aspect-ratio: 1/0.3;
+            border-radius: 5px;
+            padding: 0.4rem 0.7rem;
+            font-size: clamp(0.9rem, 1rem, 1.5rem);
+            height: 5vh;
+            gap: 1.5vw;
+        }
+
+        #ok {
+            background-color: #1765b1;
+            color: #ffffff;
+        }
+
+        #cancel {
+            background-color: #a3a3a3;
+            color: #0f0f0f
         }
     </style>
 </head>
 <body>
-<div class="title">
-    <h1 id="titleText">欢迎来到线条本条的网站！</h1>
-    <button id="node" onclick="ChangeModes()"></button>
+<div id="title">
+    <h1 id="titleText">Minecraft 1.21.1 Fabric Server Update Logs</h1>
 </div>
-<div class="download">
-    <div class="downloadList">
-        <button class="downloadButton" onclick="document.getElementById('downloadLink').click()">
-            <svg width="20" height="20" viewBox="0 2 24 24" xmlns="http://www.w3.org/2000/svg"
-                 style="vertical-align: middle">
-                <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z"
-                      fill="currentColor"/>
-                <path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z"
-                      fill="currentColor"/>
-            </svg>
-            下载 打枪游戏
-        </button>
-        <a id="downloadLink" href="/Codes/打枪游戏.cpp" download="打枪游戏.cpp" style="display: none"></a>
-
-        <button class="downloadButton" onclick="document.getElementById('downloadLink2').click()">
-            <svg width="20" height="20" viewBox="0 2 24 24" xmlns="http://www.w3.org/2000/svg"
-                 style="vertical-align: middle">
-                <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z"
-                      fill="currentColor"/>
-                <path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z"
-                      fill="currentColor"/>
-            </svg>
-            下载 CSP-J 2025 成绩表
-        </button>
-        <a id="downloadLink2" href="/Files/【民间数据】CSP-J 2025 SD 批量测试.xlsx" download="【民间数据】CSP-J 2025 SD 批量测试.xlsx" style="display: none"></a>
-
-        <button class="downloadButton" onclick="document.getElementById('downloadLink3').click()">
-            <svg width="20" height="20" viewBox="0 2 24 24" xmlns="http://www.w3.org/2000/svg"
-                 style="vertical-align: middle">
-                <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z"
-                      fill="currentColor"/>
-                <path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z"
-                      fill="currentColor"/>
-            </svg>
-            下载 CSP-S 2025 成绩表
-        </button>
-        <a id="downloadLink3" href="/Files/【民间数据】CSP-S 2025 SD 批量测试.xlsx" download="【民间数据】CSP-S 2025 SD 批量测试.xlsx" style="display: none"></a>
+<div id="updates_list">
+    <div id="add_logs" style="justify-content: flex-end;">
+        <p style="font-size: clamp(1rem, 1.1rem, 2rem)">添加日志</p>
+        <button id="add_button" onclick="add_Logs()">+</button>
     </div>
-    <span id="playOnlineGame" style="color: black; transition: all 0.25s ease;">单击此处<a class="Links" style="color: #0000ff; transition: all 0.25s ease; pointer-events: none; cursor: not-allowed;" href="javascript: void(0);"><s>在线玩打枪游戏</s></a> 或者 <a class="Links" style="color: #0000ff; transition: all 0.25s ease;" href="/Codes/numbersTest.html">练习口算</a></span> <!-- /Games/gunGame.html -->
+    <div id="logs"></div>
 </div>
-<div class="end">
-    <span>Copyright © 2025–2025 <strong>线条本条的网站 a-red-apple.github.io</strong> All Rights Reserved.</span>
-    <span>Go to <strong><a href="https://pythoncpy.github.io/" target="_black">pythoncpy.github.io</a></strong></span>
+<div id="page_submit">
+    <div id="page_submit-main">
+        <h2>确认提交</h2>
+        <p style="margin-top: 0;">提交后，表单将无法修改！</p>
+        <div class="page_submit_button_group">
+            <button class="page_submit_button_group" id="ok" onclick="pressOK()">确定</button>
+            <button class="page_submit_button_group" id="cancel" onclick="pressCancel()">取消</button>
+        </div>
+    </div>
 </div>
+
+<footer id="end">
+    <span>Copyright © 2025–2025 <strong>线条本条的我的世界网站 a-red-apple.minecraft</strong> All Rights Reserved.</span>
+</footer>
+
 <script>
-    let Now_Mode = true;
+    const list = document.getElementById("updates_list");
+    const page = document.getElementById("page_submit");
 
-    const all = {
-        body: document.body,
-        title: document.querySelector(".title"),
-        titleText: document.querySelector("#titleText"),
-        node: document.querySelector("#node"),
-        downloadList: document.querySelector(".downloadList"),
-        playOnlineGame: document.querySelector("#playOnlineGame"),
-        end: document.querySelector(".end"),
-    };
-
-    function ChangeModes() {
-        all.body.style.background = Now_Mode ? "#1e2837" : "#ffffff";
-        all.title.style.background = Now_Mode ? "#01050a" : "#f2f2f2";
-        all.titleText.style.color = Now_Mode ? "#ffffff" : "#000000";
-        all.node.style.background = Now_Mode ? "#ffffff" : "#1e2837";
-        all.downloadList.style.border = Now_Mode ? "2px solid #ffffff" : "2px solid #e4e4e4";
-        all.playOnlineGame.style.color = Now_Mode ? "#ffffff" : "#000000";
-        document.querySelectorAll(".Links").forEach(link => {
-            link.style.color = Now_Mode ? "#29ff29" : "#0000ff";
-        });
-        Now_Mode = !Now_Mode;
+    function add_Logs() {
+        list.innerHTML = `
+            <div id="add_logs" style="display: flex; justify-content: flex-start;">
+                <button id="back_button" onclick="back_to_page()"> < 返回 </button>
+            </div>
+            <div>
+                <form id="update_logs_read" onsubmit="return formSubmit(event)">
+                    <label for="log_title">日志标题</label>
+                    <input id="log_title" required name="log_title" type="text" placeholder="请输入标题...">
+                    <label for="log_information">日志内容</label>
+                    <textarea id="log_information" required name="log_information" rows="5" placeholder="请输入内容..."></textarea>
+                    <button id="submit" type="submit">提交</button>
+                </form>
+            </div>
+        `;
     }
+
+    function back_to_page() {
+        list.innerHTML = `
+            <div id="add_logs" style="justify-content: flex-end;">
+                <p style="font-size: clamp(1rem, 1.1rem, 2rem)">添加日志</p>
+                <button id="add_button" onclick="add_Logs()">+</button>
+            </div>
+            <div id="logs"></div>
+        `;
+    }
+
+    function formSubmit(e) {
+        e.preventDefault();
+        const form = e.target;
+
+        if (!form.checkValidity()) {
+            form.reportValidity();
+            return false;
+        } else {
+            showWindows();
+            return false;
+        }
+    }
+
+
+    function pressOK() {
+        hideWindows();
+        alert("表单提交成功！");
+        back_to_page();
+    }
+
+    function pressCancel() {
+        hideWindows();
+    }
+    function showWindows() {page.style="display: flex;";}
+    function hideWindows() {page.style="display: none;";}
+
 </script>
 </body>
 </html>
-
